// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDialog Basic 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <ui5-bar
      design="Footer"
      slot="footer"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow SelectDialog-spread"
      design="Header"
      slot="header"
      ui5-bar=""
    >
      <ui5-title
        level="H2"
        slot="startContent"
        ui5-title=""
      />
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow"
      data-component-name="SelectDialogSubHeader"
      design="Subheader"
      slot="header"
      ui5-bar=""
    >
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-spread"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          ui5-icon=""
        />
      </ui5-input>
    </ui5-bar>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    />
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog with headerText 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <ui5-bar
      design="Footer"
      slot="footer"
      ui5-bar=""
    >
      <ui5-button
        design="Transparent"
        slot="endContent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow SelectDialog-spread"
      design="Header"
      slot="header"
      ui5-bar=""
    >
      <ui5-title
        level="H2"
        slot="startContent"
        ui5-title=""
      >
        Select Dialog
      </ui5-title>
    </ui5-bar>
    <ui5-bar
      class="SelectDialog-noShadow"
      data-component-name="SelectDialogSubHeader"
      design="Subheader"
      slot="header"
      ui5-bar=""
    >
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-spread"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </ui5-bar>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    >
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="0"
        description="description0"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product0
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="1"
        description="description1"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product1
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="2"
        description="description2"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product2
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="3"
        description="description3"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product3
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="4"
        description="description4"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product4
      </ui5-li>
    </ui5-list>
  </ui5-dialog>
</DocumentFragment>
`;
